Attempt fix of alert js

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -75,5 +75,5 @@
     mixpanel.track("View abstract")
   })
   $(document).ready(function() {
-    alert(userEmail);
+    / alert(userEmail);
   });
