Change 'tags' to 'interests'

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -57,7 +57,7 @@
   .row
     - if user_signed_in?
       .col-sm-3.tags
-        %h5 Your Tags
+        %h5 Your Interests
         %ul
         - if user_signed_in?
           - current_user.tags.each do |tag|
